@@ -1,0 +1,1 @@
+@powershell -NoProfile -ExecutionPolicy Unrestricted -File make.ps1 %*
